<?xml version="1.0" encoding="utf-8"?>

<resources>

    <string name="app_name">Digital IC Tester</string>
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">Tester Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>

    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>

    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="is_serial">Serial Present:</string>
    <string-array name="roygbiv">
        <item>Red</item>
        <item>Green</item>
        <item>Blue</item>
    </string-array>
    <string name="button">Send</string>
    <string name="red_slide">Red</string>
    <string name="blue_slide">Blue</string>
    <string name="green_slide">Green</string>

    <!--    DEVICE SCAN ACTIVITY    -->

    <string name="txt_appVer">Version 2.0</string>
    <string name="txt_choose">SELECT TESTER DEVICE:</string>
    <string name="txt_scan">Scanning...</string>
    <string name="txt_notFound">No Device Found</string>
    <string name="txt_tester">Tester Status:</string>
    <string name="txt_responding">NOT RESPONDING</string>
    <string name="txt_serialBuffer">SERIAL BUFFER</string>

    <!--    DEVICE UNDER TEST       -->

    <string name="txt_dutType">Device Type :</string>
    <string name="rad_ttl">TTL</string>
    <string name="rad_cmos">CMOS</string>
    <string name="txt_dutName">Device Name :</string>
    <string-array name="ttlList">
        <item>74LS00 (NAND)</item>
        <item>74LS02 (NOR)</item>
        <item>74LS04 (NOT)</item>
        <item>74LS08 (AND)</item>
        <item>74LS32 (OR)</item>
        <item>74LS86 (XOR)</item>
        <item>74LS266 (XNOR)</item>
    </string-array>
    <string-array name="cmosList">
        <item>CD4001 (NOR)</item>
        <item>CD4011 (NAND)</item>
        <item>CD4069 (NOT)</item>
        <item>CD4070 (XOR)</item>
        <item>CD4071 (OR)</item>
        <item>CD4077 (XNOR)</item>
        <item>CD4081 (AND)</item>
    </string-array>
    <string name="txt_btnTest">TEST</string>

    <!--        TEST REMINDERS DIALOG       -->

    <string name="txt_remPowerTTL">MAKE SURE POWER SOURCE IS AT 5V</string>
    <string name="txt_remPowerCMOS">POWER SOURCE CAN BE EITHER 3.3V OR 5V</string>
    <string name="txt_remPin1">MAKE SURE THE COMPONENT IS ALIGNED</string>
    <string name="txt_remPin2">THE SAME WAY AS THE IMAGE ABOVE</string>

    <!--        TEST RESULTS ACTIVITY       -->

    <string name="title_activity_test_result">TEST RESULTS</string>
    <string name="txt_resultPASS">DEVICE PASSED</string>
    <string name="txt_resultFAIL">DEVICE FAILED</string>

</resources>
