<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2013 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:weightSum="1">

    <LinearLayout
        android:id="@+id/linear_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout android:orientation="horizontal"
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:layout_margin="5dp">
                <TextView android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="@string/label_device_address"
                          android:textSize="12sp"/>
                <Space android:layout_width="5dp"
                       android:layout_height="wrap_content"/>
                <TextView android:id="@+id/device_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"/>
            </LinearLayout>

            <LinearLayout android:orientation="horizontal"
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:layout_margin="5dp">
                <TextView android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="@string/label_state"
                          android:textSize="12sp"/>
                <Space android:layout_width="5dp"
                       android:layout_height="wrap_content"/>
                <TextView android:id="@+id/connection_state"
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:text="@string/disconnected"
                          android:textSize="12sp"/>
            </LinearLayout>

            <LinearLayout android:orientation="horizontal"
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:layout_margin="5dp">

                <TextView android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="@string/label_data"
                          android:textSize="12sp"/>

                <Space android:layout_width="5dp"
                       android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/data_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/no_data"
                    android:textSize="12sp" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp">

                <TextView
                    android:id="@+id/isSerial"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/is_serial"
                    android:textSize="12sp"/>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_tester"
                    android:textSize="12sp"/>

                <Space android:layout_width="5dp"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/testerStatus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="SERIAL BUFFER"/>

            <TextView
                android:id="@+id/txtSerialBuffer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="12sp"
                android:scrollbars="vertical"
                android:gravity="bottom"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/linear_status"
        android:layout_above="@+id/linear_button"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtTestResults"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical"
            android:layout_margin="5dp"
            android:gravity="bottom" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/btnTest"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="30dp"
            android:text="@string/txt_btnTest"
            android:textStyle="bold"
            android:textSize="30sp"
            android:enabled="false" />

    </LinearLayout>

</RelativeLayout>